--- a/tut_py_2_3_type_part1_list.ipynb
+++ b/tut_py_2_3_type_part1_list.ipynb
@@ -5,10 +5,17 @@
    "id": "d025eac2-9754-4ffa-872a-17ce06992ae3",
    "metadata": {},
    "source": [
-    "### 2️. List (list) Operations\n",
-    "- A list is an **ordered, mutable** collection of elements. (**Ordered** means that the elements of list are printed in the order in which they were entered. This is not True for dict and set)\n",
-    "- can contain **duplicates**\n",
-    "- are heterogenous (can contain elements of different kind like int, str, boolean, etc.)"
+    "### List:\n",
+    "- A list is an **ordered, mutable** collection of elements.\n",
+    "- Can contain **duplicates**\n",
+    "- Are heterogenous (can contain elements of different kind like int, str, boolean, etc.)\n",
+    "- Supports indexing and slicing (my_list[0], my_list[1:3])\n",
+    "\n",
+    "##### Use Case:\n",
+    "```\n",
+    "- When you need to preserve order of elements.\n",
+    "- When the collection will change frequently (e.g., insert, update, delete).\n",
+    "- Best for general-purpose storage and manipulation.\n"
    ]
   },
   {
@@ -101,9 +108,8 @@
     }
    ],
    "source": [
-    "numbers = [10, 30, 60, 70, 50] # age, income, houses, size of plot,etc\n",
-    "\n",
-    "# Accessing elements: index starts with 0\n",
+    "# list: index starts with 0\n",
+    "numbers = [10, 30, 60, 70, 50, 30, 60, 50] # age, income, houses, size of plot,etc\n",
     "print(numbers[0])   # prints element at index 0 : 10\n",
     "print(numbers[1])   # prints element at index 1 : 30\n",
     "print(numbers[3])   # prints element at index 3 : 70\n",
@@ -111,13 +117,15 @@
     "print(numbers[-1])  # access last number 50\n",
     "print(\"1111111111111111111111111111\\n\")\n",
     "\n",
-    "# Slicing\n",
+    "# Slicing: [start_idx: stop_idx: step_size]. \n",
+    "# Default for start_idx=0, default for stop_idx=last position, default for step_size=1\n",
     "print(numbers[1:3])  # slice from idx=1 to idx=3: [30, 60]\n",
-    "print(numbers[:3])   # slice [10, 30, 60]\n",
-    "print(numbers[2:])   # slice from index 2 to last [60, 70, 50]\n",
+    "print(numbers[1:7:2])  # slice from idx=1 to idx=6 with step size=2: [30, 70, 30]\n",
+    "\n",
+    "print(numbers[:3])   # slice first 3 elements: [10, 30, 60]\n",
+    "print(numbers[2:])   # slice from index 2 to last [60, 70, 50, 30, 60, 50]\n",
     "print(numbers[::2]) # from begin to end with step size =2\n",
-    "print(numbers[::-1]) # reverse\n",
-    "print(\"222222222222222222222222222222\\n\")"
+    "print(numbers[::-1]) # reverse"
    ]
   },
   {
@@ -162,10 +170,59 @@
     "numbers.pop(2) # works on actual index\n",
     "print(f\"numbers after pop: {numbers}\")\n",
     "\n",
+    "# Sorting\n",
+    "numbers = [-6, 10, 20, 30, 25, 40, 17]\n",
+    "numbers.sort()\n",
+    "print(f\"After sort: {numbers}\")  \n",
+    "print(\"########################\")\n",
+    "\n",
+    "\n",
+    "# Reversing\n",
+    "numbers = [-6, 10, 20, 30, 25, 40, 17]\n",
+    "numbers.reverse()\n",
+    "print(f\"After reverse: {numbers}\")  \n",
+    "\n",
+    "\n",
     "## list is mutable\n",
     "numbers = [10, 20, 30, 40, 50]\n",
     "numbers[2] = 25\n",
     "print(f\"mutablility: numbers: {numbers}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5181a475-4747-4fd5-abdd-c4336027e70a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find idx of an element\n",
+    "numbers = [10, 20, 30, 40, 50]\n",
+    "print(numbers.index(30))\n",
+    "\n",
+    "# count how many 60 are there\n",
+    "numbers = [10, 20, 60, 30, 60, 40, 60]\n",
+    "count = numbers.count(60) # Count all occurrences of item 60\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10dab3e1-ebde-459d-9883-59de94a95034",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create copy of a list\n",
+    "\n",
+    "numbers = [10, 20, 60, 30, 60, 40, 60]\n",
+    "#style1\n",
+    "n = numbers.copy()\n",
+    "print(n)\n",
+    "\n",
+    "#style2\n",
+    "n = numbers[:]\n",
+    "print(n)"
    ]
   },
   {
@@ -200,34 +257,6 @@
     "fruits.extend(fruits_new) # extend unpacks the list\n",
     "print(fruits)\n",
     "print(len(fruits))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "dfe2d6a0-7f13-4a72-b2eb-7bbc3b4df582",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After sort: [-6, 10, 17, 20, 25, 30, 40]\n",
-      "After reverse: [17, 40, 25, 30, 20, 10, -6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "numbers = [-6, 10, 20, 30, 25, 40, 17]\n",
-    "# Sorting\n",
-    "numbers.sort()\n",
-    "print(f\"After sort: {numbers}\")  \n",
-    "print(\"########################\")\n",
-    "\n",
-    "numbers = [-6, 10, 20, 30, 25, 40, 17]\n",
-    "# Reversing\n",
-    "numbers.reverse()\n",
-    "print(f\"After reverse: {numbers}\")  "
    ]
   },
   {
@@ -278,60 +307,6 @@
     "\n",
     "b = 401 in numbers\n",
     "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "e4cc175b-c624-47c0-9d5c-a8c251c4c73a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "# find idx of an element\n",
-    "numbers = [10, 20, 30, 40, 50]\n",
-    "print(numbers.index(30))\n",
-    "\n",
-    "# count how many 60 are there\n",
-    "numbers = [10, 20, 60, 30, 60, 40, 60]\n",
-    "count = numbers.count(60) # Count all occurrences of item 60\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b2311ee1-88f3-4083-996a-fc56ec75a03b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10, 20, 60, 30, 60, 40, 60]\n",
-      "[10, 20, 60, 30, 60, 40, 60]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# create copy of a list\n",
-    "\n",
-    "numbers = [10, 20, 60, 30, 60, 40, 60]\n",
-    "#style1\n",
-    "n = numbers.copy()\n",
-    "print(n)\n",
-    "\n",
-    "#style2\n",
-    "n = numbers[:]\n",
-    "print(n)"
    ]
   },
   {
