--- a/tut_py_2_3_type_part3_set.ipynb
+++ b/tut_py_2_3_type_part3_set.ipynb
@@ -5,9 +5,18 @@
    "id": "503df67f-a6b8-405a-b978-59e8bdefd3e9",
    "metadata": {},
    "source": [
-    "# Sets: container for data\n",
-    "- not ordered\n",
-    "- contains unique elements. No duplicates"
+    "### Sets:\n",
+    "- A set is an **unordered, mutable** collection of elements.\n",
+    "- Contains **no duplicates**. In other words, it contains **unique elements**. \n",
+    "- A set can contain elements of different data types as long as elements are str, int, float or bool. A set cannot contain list, tuple or dict.\n",
+    "- Does not support indexing or slicing\n",
+    "\n",
+    "#### Use Case:\n",
+    "```\n",
+    "- When you need to eliminate duplicates.\n",
+    "- When doing set operations like union, intersection, difference.\n",
+    "- Useful for membership testing (if x in my_set) — fast lookup.\n",
+    "```\n"
    ]
   },
   {
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "7e3f6de9-3447-4aa3-89a9-2f95fbb94a31",
    "metadata": {},
    "outputs": [
@@ -53,21 +62,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mars', 'jupyter', 'saturn'}\n",
-      "{'mars', 'jupyter', 'saturn'}\n"
+      "{'jupyter', 'mars', 'saturn'}\n",
+      "{'jupyter', 'mars', 'saturn'}\n"
      ]
     }
    ],
    "source": [
     "# create set from elements of a list or tuple\n",
     "\n",
-    "l = [\"mars\", \"jupyter\", \"saturn\"] # a list\n",
+    "l = [\"mars\", \"jupyter\", \"saturn\", \"mars\"] # a list\n",
     "\n",
     "planets = set(l) # on list\n",
     "print(planets)  \n",
     "\n",
     "#####################\n",
-    "t = (\"mars\", \"jupyter\", \"saturn\") # a tuple\n",
+    "t = (\"mars\", \"jupyter\", \"saturn\", \"mars\") # a tuple\n",
     "\n",
     "planets = set(t) # on tuple\n",
     "print(planets)  "
@@ -89,11 +98,6 @@
     }
    ],
    "source": [
-    "# Sets remove duplicates: lets add duplicates and set() will remove them\n",
-    "even = {8, 4, 10, 2, 4, 4} \n",
-    "print(even)\n",
-    "\n",
-    "###################\n",
     "# A simple but useful application of set:  You have list of items that contain some duplicate entries. Remove them using set.\n",
     "\n",
     "emails = [\"user1@example.com\", \"user2@example.com\", \"user1@example.com\", \"user1@example.com\"]\n",
@@ -151,15 +155,17 @@
     }
    ],
    "source": [
+    "# Let look at few of them\n",
+    "\n",
     "# add and remove elements\n",
     "\n",
-    "guests = {\"Sarah\", \"Wurtzberger\", \"Charlie\"}\n",
+    "guests = {\"Sarah\", \"Wurtzberger\", \"Connor\", \"Shamlodhiya\"}\n",
     "\n",
-    "guests.add(\"David\")  # Add a guest\n",
+    "guests.add(\"Ravinder\")  # Add a guest\n",
     "print(guests)\n",
     "\n",
     "##############\n",
-    "guests.remove(\"Charlie\")  # Remove a guest\n",
+    "guests.remove(\"Connor\")  # Remove a guest\n",
     "print(guests)\n"
    ]
   },
@@ -196,16 +202,53 @@
     "class_gym = {\"Bob\", \"David\", \"Zena\", \"Geeta\"}\n",
     "\n",
     "# Union (All students)\n",
+    "print(\"union       :\", class_art.union(class_gym))  \n",
     "print(\"union       :\", class_art | class_gym)  \n",
     "\n",
     "# Intersection (Students in both classes)\n",
+    "print(\"intersection:\", class_art.intersection(class_gym))  \n",
     "print(\"intersection:\", class_art & class_gym)  \n",
     "\n",
     "# Difference (Students only in class art and not in gym class)\n",
+    "print(\"difference1 :\", class_art.difference(class_gym))\n",
     "print(\"difference1 :\", class_art - class_gym)\n",
     "\n",
     "# Difference (Students only in class gym and not in art class)\n",
-    "print(\"difference2 :\", class_gym - class_art)  "
+    "print(\"difference2 :\", class_gym.difference(class_art))  \n",
+    "print(\"difference2 :\", class_gym - class_art)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3390c577-bd35-4643-8935-6e5c545b365f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# isdisjoint\n",
+    "a = {1, 2, 3}\n",
+    "b = {4, 5, 6}\n",
+    "c = {2, 4}\n",
+    "\n",
+    "print(a.isdisjoint(b))  # True -> no common elements\n",
+    "print(a.isdisjoint(c))  # False -> 2 is common\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a8ecd4b-bd19-44fc-b050-3e39396771e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# issubset\n",
+    "a = {1, 2, 3}\n",
+    "b = {1, 2}\n",
+    "c = {1, 2, 3, 4}\n",
+    "\n",
+    "print(b.issubset(a))  # True -> b is subset of a\n",
+    "print(a.issubset(c))  # True -> all elements of a are in c\n",
+    "print(c.issubset(a))  # False -> 4 is not in a\n"
    ]
   },
   {
@@ -240,6 +283,35 @@
     "    print(f\"{srch} is in the set.\")\n",
     "else:\n",
     "    print(f\"{srch} is NOT in the set.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "902aa231-9066-4ec3-a118-90f2fba8c744",
+   "metadata": {},
+   "source": [
+    "## 5. min, max, sum, len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4000f871-6f68-45c7-a198-36911fcfc459",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set:\n",
+    "numbers = { 30, 20, 40, 50, 10, 20 }\n",
+    "print(f\"numbers: {numbers}\")\n",
+    "\n",
+    "print(min(numbers))\n",
+    "print(max(numbers))\n",
+    "print(sum(numbers))\n",
+    "print(len(numbers))\n",
+    "\n",
+    "# a simple application:\n",
+    "average = sum(numbers) / len(numbers)\n",
+    "print(average)"
    ]
   }
  ],
