--- a/tut_py_2_type_part4_1_dict.ipynb
+++ b/tut_py_2_type_part4_1_dict.ipynb
@@ -48,9 +48,9 @@
    "source": [
     "# creating dict: style1\n",
     "student_scores = {\n",
-    "    \"Ram\": 85, \n",
-    "    \"Carlos\": 92, \n",
-    "    \"Roman\": 78\n",
+    "    \"Ram\"    : 85, \n",
+    "    \"Carlos\" : 92, \n",
+    "    \"Roman\"  : 78\n",
     "}\n",
     "\n",
     "print(student_scores)\n",
@@ -137,8 +137,8 @@
     "\n",
     "student_scores = {\n",
     "   \"Surendar\": 85, \n",
-    "   \"Bob\": 92,\n",
-    "   \"Tanner\": 78\n",
+    "   \"Bob\"     : 92,\n",
+    "   \"Tanner\"  : 78\n",
     "}\n",
     "\n",
     "print(student_scores[\"Surendar\"])  # Output: 85\n",
@@ -167,8 +167,8 @@
     "# show me all keys\n",
     "student_scores = {\n",
     "   \"Surendar\": 85, \n",
-    "   \"Bob\": 92,\n",
-    "   \"Tanner\": 78\n",
+    "   \"Bob\"     : 92,\n",
+    "   \"Tanner\"  : 78\n",
     "}\n",
     "\n",
     "keys = student_scores.keys()\n",
@@ -262,8 +262,8 @@
     "\n",
     "student_scores = {\n",
     "   \"Surendar\": 85, \n",
-    "   \"Bob\": 92,\n",
-    "   \"Tanner\": 78\n",
+    "   \"Bob\"     : 92,\n",
+    "   \"Tanner\"  : 78\n",
     "}\n",
     "\n",
     "print(f\"before adding:{student_scores}\")\n",
@@ -308,8 +308,8 @@
     "\n",
     "student_scores = {\n",
     "   \"Surendar\": 85, \n",
-    "   \"Bob\": 92,\n",
-    "   \"Tanner\": 78\n",
+    "   \"Bob\"     : 92,\n",
+    "   \"Tanner\"  : 78\n",
     "}\n",
     "\n",
     "for name,score in student_scores.items():\n",
@@ -323,6 +323,7 @@
     "for name,score in student_scores.items():\n",
     "   if score > 80:\n",
     "       count +=1\n",
+    "       \n",
     "print(count)"
    ]
   },
@@ -350,19 +351,36 @@
     }
    ],
    "source": [
-    "# check for a key\n",
+    "# check for a key, value\n",
     "\n",
     "student_scores = {\n",
     "   \"Surendar\": 85, \n",
-    "   \"Bob\": 92,\n",
-    "   \"Tanner\": 78\n",
+    "   \"Bob\"     : 92,\n",
+    "   \"Tanner\"  : 78\n",
     "}\n",
     "\n",
     "search = 'Eve' # Tanner\n",
+    "\n",
+    "# method1:\n",
     "if search in student_scores:\n",
     "    print(f\" {search} score is available.\")\n",
     "else:\n",
-    "    print(f\" {search} score is not found.\")"
+    "    print(f\" {search} score is not found.\")\n",
+    "\n",
+    "#########################################\n",
+    "# method2:\n",
+    "if search in student_scores.keys():\n",
+    "    print(f\" {search} score is available.\")\n",
+    "else:\n",
+    "    print(f\" {search} score is not found.\")\n",
+    "\n",
+    "#########################################\n",
+    "\n",
+    "if 78 in student_scores.values():\n",
+    "    print(f\"score is available.\")\n",
+    "else:\n",
+    "    print(f\"score not found.\")\n",
+    "\n"
    ]
   },
   {
