--- a/tut_py_5_fileHandling_osModule.ipynb
+++ b/tut_py_5_fileHandling_osModule.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## What is File Handling?\n",
-    "File handling in Python allows us to read from and write to files stored on a computer. It is essential for working with data storage, logging, and configuration files.\n",
+    "File handling in Python allows us to read from and write to files stored on a computer. It is essential for working with **data storage, logging, and configuration files.**\n",
     "\n",
     "### File Modes in Python\n",
     "Python provides different modes for opening files:\n",
@@ -52,8 +52,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad11d27f-ff8f-4bde-9b9c-0a85443e2c92",
+   "metadata": {},
+   "source": [
+    "###  write method"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "07de4bf4-d4e7-49f6-be65-71f6d16a6a84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets open a file for writing:\n",
+    "\n",
+    "# style1: write multiple strings\n",
+    "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
+    "\n",
+    "msg = \"1 Hello, World!\\n\"\n",
+    "file.write(msg) \n",
+    "\n",
+    "msg = \"Life is great\\n\"\n",
+    "file.write(msg) # Warning: \"w\" mode will erase existing content before writing new data.\n",
+    "\n",
+    "msg = \"But homework is torture\\n\"\n",
+    "file.write(msg) # Warning: \"w\" mode will erase existing content before writing new data.\n",
+    "\n",
+    "file.close()\n",
+    "\n",
+    "# view the file in  notepad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f7edb648-7e20-40d3-a560-bffec1c97af5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# style2: write multiple strings using a for loop\n",
+    "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
+    "\n",
+    "messages = [\"2 Hello, World!\\n\",\n",
+    "            \"Life is great\\n\",\n",
+    "            \"But homework is torture\\n\"\n",
+    "]\n",
+    "\n",
+    "for msg in messages:\n",
+    "    file.write(msg) \n",
+    "\n",
+    "file.close()\n",
+    "\n",
+    "# view the file in  notepad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fb0983f3-90de-4702-bae3-aeab7b1fed32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# style3: write multiple strings\n",
+    "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
+    "\n",
+    "msg = \"\"\"3 Hello, World!\n",
+    "Python is great\n",
+    "But homework is torture\n",
+    "\"\"\"\n",
+    "\n",
+    "file.write(msg) \n",
+    "\n",
+    "file.close()\n",
+    "\n",
+    "# view the file in  notepad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3d41fed0-36c7-4b13-a008-3436964047d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# style4: Using with statement (Recommended)\n",
+    "# Lets redo above using with\n",
+    "\n",
+    "msg = \"\"\"4 Hello, World!\n",
+    "Python is great\n",
+    "But homework is torture\n",
+    "\"\"\"\n",
+    "\n",
+    "# Open the file in write mode\n",
+    "with open(\"example.txt\", \"w\") as file:\n",
+    "    file.write(msg)\n",
+    "\n",
+    "# The file is automatically closed when using 'with' statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dce7591-3b01-4c39-9fa3-a31702caaecb",
+   "metadata": {},
+   "source": [
+    "### read method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "ce34d3bd-35ea-47d5-9705-ae2ff9f0d108",
    "metadata": {},
    "outputs": [
@@ -61,20 +170,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World!\n",
+      "4 Hello, World!\n",
       "Python is great\n",
-      "But homework is torturee\n",
-      "Appending new line!\n"
+      "But homework is torture\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Opening and Closing a File\n",
+    "# Now lets read the file:\n",
     "\n",
+    "# style1:\n",
     "# Example: Open a File, store content into a variable, print the variable and then Close It\n",
     "file = open(\"example.txt\", \"r\")\n",
     "\n",
     "content = file.read()\n",
+    "# content = file.read(10) # Reads the first 10 characters\n",
+    "\n",
     "print(content)\n",
     "\n",
     "file.close()\n"
@@ -82,75 +194,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "dc874e60-9bc6-4f7e-946b-345112993192",
+   "execution_count": 14,
+   "id": "8c410768-c4eb-40b9-b5ac-9e269c1be20a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, Wor\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example: Read a Specific Number of Characters\n",
-    "file = open(\"example.txt\", \"r\")\n",
-    "\n",
-    "content = file.read(10) # Reads the first 10 characters\n",
-    "print(content)\n",
-    "\n",
-    "file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b97a17ae-6019-4e47-b6bd-b0d3881921ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n",
-      "\n",
+      "['3 Hello, World!\\n', 'Python is great\\n', 'But homework is torture\\n']\n",
+      "########################\n",
+      "3 Hello, World!\n",
       "Python is great\n",
-      "\n"
+      "But homework is torture\n"
      ]
     }
    ],
    "source": [
-    "# Example: Read Line by Line\n",
-    "file = open(\"example.txt\", \"r\")\n",
+    "# style2: Read All Lines into a List and print the entire list\n",
     "\n",
-    "content = file.readline() # Reads line 1 \n",
-    "print(content)  \n",
-    "\n",
-    "content = file.readline() # Reads line 2 \n",
-    "print(content)  \n",
-    "\n",
-    "\n",
-    "file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63959a88-2175-4a72-9714-48fd158dcd5a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['I came on a metro.\\n', 'It took me some time.\\n', 'I have reached.']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example: STEP1: Read All Lines into a List and print the entire list\n",
+    "#step1\n",
     "file = open(\"example.txt\", \"r\")\n",
     "\n",
     "lines = file.readlines()  # Reads all lines into a list\n",
@@ -158,146 +221,105 @@
     "\n",
     "file.close()\n",
     "\n",
-    "#cont.."
+    "print(\"########################\")\n",
+    "# step2: Read All Lines as a List and print in a readable form\n",
+    "for line in lines:\n",
+    "    print(line, end='')\n",
+    "\n",
+    "file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84aa73fa-fa03-4dd3-9dd6-1ad066107275",
+   "execution_count": 21,
+   "id": "cd56db41-d9b0-4052-aaff-d1fdf2458bad",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World!\n",
+      "4 Hello, World!\n",
       "Python is great\n",
-      "But homework is torturee\n",
-      "Appending new line!"
+      "But homework is torture\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# STEP2: Read All Lines as a List and print in a readable form\n",
-    "file = open(\"example.txt\", \"r\")\n",
+    "# style3: read using with statement. \n",
+    "# with statement closes the file automatically\n",
     "\n",
-    "lines = file.readlines()  # Reads all lines into a list\n",
-    "for line in lines:\n",
-    "    print(line, end='')\n",
+    "# Open the file in read mode\n",
+    "with open(\"example.txt\", \"r\") as file:\n",
+    "    content = file.read()\n",
     "\n",
-    "file.close()\n"
+    "print(content)\n",
+    "# The file is automatically closed when using 'with' statement\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3bf8e84e-f471-4a1f-aa43-5ee4b87589b7",
+   "execution_count": 26,
+   "id": "b5387d94-e9a6-4826-87a0-73366b354add",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "209,shamlodhiya,Citeaux,Caravy,France\n",
+      "\n",
+      "328,shamlodhiya,Brown,William,USA\n",
+      "\n",
+      "################\n",
+      "209,shamlodhiya,Citeaux,Caravy,France\n",
+      "328,shamlodhiya,Brown,William,USA\n",
+      "350,Marseille Mini Shamlodhiya,Lebihan,Laurence ,France\n"
+     ]
+    }
+   ],
    "source": [
-    "# Writing to a File\n",
-    "# Write to a File (w mode)\n",
-    "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
+    "# a simple application: read text file and print only rows that contains string shamlodhiya and send email to him\n",
+    "# Open the file in read mode\n",
     "\n",
-    "msg = \"Hello, World!\\n\"\n",
-    "file.write(msg) # Warning: \"w\" mode will erase existing content before writing new data.\n",
+    "#STEP1: create a simple program\n",
+    "with open(\"data_people.txt\", \"r\") as file:\n",
+    "    for line in file:\n",
+    "        if \"shamlodhiya\" in line: \n",
+    "            print(line)\n",
+    "            print(f\"sending email to shamlodhiya\")\n",
+    "            print(\"**********************\")\n",
     "\n",
-    "file.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3c4a6fe-e2f0-4430-b4e9-441e475bae8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write series of txt\n",
     "\n",
-    "# STYLE1:\n",
-    "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
-    "\n",
-    "msg = \"Hello, World!\\n\"\n",
-    "file.write(msg) # Warning: \"w\" mode will erase existing content before writing new data.\n",
-    "\n",
-    "msg = \"Python is great\\n\"\n",
-    "file.write(msg)\n",
-    "\n",
-    "msg = \"But homework is torture1\"\n",
-    "file.write(msg)\n",
-    "\n",
-    "file.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c032380f-5661-40eb-a8ee-70cf30b39cb7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# STYLE2:  write series of txt\n",
-    "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
-    "\n",
-    "msg = \"Hello, World!\\n\"\n",
-    "msg = msg + \"Python is great\\n\"\n",
-    "msg = msg + \"But homework is torture2\"\n",
-    "file.write(msg)\n",
-    "\n",
-    "file.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd9533af-81a6-419d-8a77-c7525a991fe9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# STYLE3:  write series of txt\n",
-    "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
-    "\n",
-    "msg = \"\"\"Hello, World!\n",
-    "Python is great\n",
-    "But homework is torture3\"\"\"\n",
-    "file.write(msg)\n",
-    "\n",
-    "file.close()\n",
-    "# cont.."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57a211e6-432b-4467-8e9e-1b820a9da05c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# STYLE4: List of lines to write to the file\n",
-    "lines = [\n",
-    "    \"Hello, World!\\n\",\n",
-    "    \"Python is great\\n\",\n",
-    "    \"But homework is torture\\n\"\n",
-    "]\n",
-    "\n",
-    "# Open the file in write mode\n",
-    "file = open(\"example.txt\", \"w\")\n",
-    "\n",
-    "file.writelines(lines) # Write the list of lines to the file\n",
-    "\n",
-    "file.close()\n",
+    "print(\"################\")\n",
+    "# step2: take into account uppercase and lowercase. \n",
+    "# Also remove extra spaces or newline characters before printing.\n",
+    "with open(\"data_people.txt\", \"r\") as file:\n",
+    "    for line in file:\n",
+    "        if \"shamlodhiya\" in line.lower(): \n",
+    "            print(line.strip())\n",
+    "            print(f\"sending email to shamlodhiya\")\n",
+    "            print(\"*****************************\")\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73b075a5-23f9-4a6f-b0a4-6a3fcdf67b9a",
+   "metadata": {},
+   "source": [
+    "### append"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0f3416ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Append to a File (a mode)\n",
+    "# We can also append to a File (a mode)\n",
     "file = open(\"example.txt\", \"a\")  # Opens in append mode\n",
     "\n",
     "file.write(\"\\nAppending new line!\")\n",
@@ -308,28 +330,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7e654d1",
+   "metadata": {},
+   "source": [
+    "# STOP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83ce1031-a4cd-43e6-a06e-063811e598c8",
+   "id": "243f6491-c6a8-4b08-bab0-10da70b68a18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n",
-      "Python is great!\n",
-      "Appending new line!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Using with Statement (Recommended)\n",
-    "# Using with open(...) automatically closes the file after the block ends.\n",
-    "with open(\"example.txt\", \"r\") as file:\n",
-    "    content = file.read()\n",
-    "    print(content)  # File is automatically closed after this block\n"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f9b2fdd-ed1b-4365-913d-6e719bec12c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29a88349-de4e-46b4-9a19-1ee77e081e2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e2ee038-4a37-4874-8d53-1c425237ae3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5d63c2e-987d-4300-bbd8-c7c586042dc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -337,28 +383,35 @@
    "id": "18d5348e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Using with statement (Recommended)\n",
-    "\n",
-    "# List of lines to write to the file\n",
-    "lines = [\n",
-    "    \"Hello, World!\\n\",\n",
-    "    \"Python is great\\n\",\n",
-    "    \"But homework is torture\\n\"\n",
-    "]\n",
-    "\n",
-    "# Open the file in write mode\n",
-    "with open(\"example.txt\", \"w\") as file:\n",
-    "    file.writelines(lines)# Write the list of lines to the file\n",
-    "\n",
-    "# The file is automatically closed when using 'with' statement\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "27dbe54b-922c-4024-9147-fdbbe41213f6",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2708836",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5e36fbcf-bab2-4174-988a-33d5f9286628",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SKIP: ADVANCED: Working with Binary Files\n",
+    "# Binary mode (b) is useful for images, videos, PDFs, etc.\n",
+    "\n",
+    "# Example: Copy an Image\n",
+    "with open(\"image.jpg\", \"rb\") as source:\n",
+    "    with open(\"junk.jpg\", \"wb\") as copy:\n",
+    "        copy.write(source.read())\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -378,7 +431,7 @@
     }
    ],
    "source": [
-    "# Example: Using seek() and tell()\n",
+    "# SKIP: ADVANCED Example: Using seek() and tell()\n",
     "with open(\"example.txt\", \"r\") as file:\n",
     "    print(file.tell())  # Shows cursor position (0 at start)\n",
     "    print(file.read(5))  # Reads first 5 characters\n",
@@ -386,36 +439,6 @@
     "    file.seek(0)  # Moves cursor back to the beginning\n",
     "    print(file.read(2))  # Reads first 2 chars\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "5e36fbcf-bab2-4174-988a-33d5f9286628",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Working with Binary Files\n",
-    "# Binary mode (b) is useful for images, videos, PDFs, etc.\n",
-    "\n",
-    "# Example: Copy an Image\n",
-    "with open(\"image.jpg\", \"rb\") as source:\n",
-    "    with open(\"junk.jpg\", \"wb\") as copy:\n",
-    "        copy.write(source.read())\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7e654d1",
-   "metadata": {},
-   "source": [
-    "# STOP"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2708836",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1161,7 +1184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1175,7 +1198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
