--- a/tut_py_2_0_operators_2_Logical_Membership_Identity.ipynb
+++ b/tut_py_2_0_operators_2_Logical_Membership_Identity.ipynb
@@ -352,7 +352,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Membership Operator- in, not in"
+    "# 5. Membership Operator- in, not in\n",
+    "- return boolean variable: True or False"
    ]
   },
   {
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +422,7 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -430,7 +431,7 @@
     "lst = [1, 3, 5, 2]\n",
     "\n",
     "print(1 in lst)\n",
-    "print(2 in lst)"
+    "print(7 in lst)"
    ]
   },
   {
@@ -444,12 +445,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Identity Operator is , is not\n",
+    "### 6. Identity Operator: is , is not\n",
     "Used to check if 2 variables refer to the same memory location, not just if they have the same value.\n",
     "\n",
     "- **==** Checks whether two values are equal. It compares **contents/values**, not whether they’re the same object.\n",
     "\n",
-    "- **is** Checks whether two variables point to the **same object in memory**."
+    "- **is** Checks whether two variables point to the **same object in memory**.\n",
+    "\n",
+    "- return a boolean variable: True or False"
    ]
   },
   {
@@ -716,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
