--- a/tut_py_2_3_type_part2_tuple.ipynb
+++ b/tut_py_2_3_type_part2_tuple.ipynb
@@ -5,11 +5,18 @@
    "id": "a925e0a6-3d83-44a1-88ab-a744dc5eed1d",
    "metadata": {},
    "source": [
-    "### 3️. Tuple (tuple) Operations\n",
+    "###  Tuple:\n",
     "- A tuple is an **ordered, immutable** collection of elements.\n",
-    "- slightly faster than list and ideal when **data remains fixed**. That is you do not have to perform many insert or update operation.\n",
-    "- can contain **duplicates**\n",
-    "- are heterogenous (can contain elements of different kind)\n"
+    "- Can contain **duplicates**\n",
+    "- Are heterogenous (can contain elements of different kind like int, str, boolean, etc.)\n",
+    "- Supports indexing and slicing (my_tuple[0], my_tuple[1:3])\n",
+    "- Slightly faster than list and **ideal when data remains fixed**. That is you do not have to perform many insert or update operation.\n",
+    "\n",
+    "#### Use Case:\n",
+    "```\n",
+    "- When you want to create a fixed, constant data structure.\n",
+    "- Often used for read-only or hashable data (e.g., keys in dictionaries).\n",
+    "- Ideal when data should not be changed accidentally.\n"
    ]
   },
   {
@@ -113,6 +120,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5bfe1b66-2328-4b5e-becb-0b7b815935da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# accessing elements\n",
+    "\n",
+    "# tuple: index starts with 0\n",
+    "numbers = (10, 30, 60, 70, 50, 30, 60, 50) # age, income, houses, size of plot, etc\n",
+    "print(numbers[0])   # prints element at index 0 : 10\n",
+    "print(numbers[1])   # prints element at index 1 : 30\n",
+    "print(numbers[3])   # prints element at index 3 : 70\n",
+    "\n",
+    "print(numbers[-1])  # access last number 50\n",
+    "print(\"1111111111111111111111111111\\n\")\n",
+    "\n",
+    "# Slicing: [start_idx: stop_idx: step_size]. \n",
+    "# Default for start_idx=0, default for stop_idx=last position, default for step_size=1\n",
+    "print(numbers[1:3])  # slice from idx=1 to idx=3: [30, 60]\n",
+    "print(numbers[1:7:2])  # slice from idx=1 to idx=6 with step size=2: [30, 70, 30]\n",
+    "\n",
+    "print(numbers[:3])   # slice first 3 elements: [10, 30, 60]\n",
+    "print(numbers[2:])   # slice from index 2 to last [60, 70, 50, 30, 60, 50]\n",
+    "print(numbers[::2]) # from begin to end with step size =2\n",
+    "print(numbers[::-1]) # reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "a3b1029a-0c38-44fe-ad33-351c706df058",
    "metadata": {},
@@ -135,14 +171,6 @@
    ],
    "source": [
     "fruits = (\"apple\", \"banana\", \"cherry\")\n",
-    "\n",
-    "# Accessing elements\n",
-    "print(fruits[0])  # 'apple'\n",
-    "print(fruits[-1])  # 'cherry'\n",
-    "print(fruits[-2])  # 'banana'\n",
-    "\n",
-    "# Slicing\n",
-    "print(fruits[1:])  # ('banana', 'cherry')\n",
     "\n",
     "# Tuple concatenation\n",
     "new_fruits = fruits + (\"orange\", \"grape\", \"apple\")\n",
