--- a/project_card_swipes/2_find_all_employees_who_are_terminated.ipynb
+++ b/project_card_swipes/2_find_all_employees_who_are_terminated.ipynb
@@ -6,9 +6,7 @@
    "id": "328ac320-dc7c-4669-96d7-4a9cbccd1920",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "file_name = \"swipe_schedule.txt\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -89,8 +87,9 @@
    ],
    "source": [
     "# STEP1: lets iterate over the whole file and print all the employees\n",
-    "# i = 0, 14, 28 \n",
+    "# i = 0, 14, 28, ..\n",
     "\n",
+    "file_name = \"swipe_schedule.txt\"\n",
     "file = open(file_name, \"r\")\n",
     "\n",
     "lines = file.readlines()  # Reads all lines into a list\n",
@@ -151,7 +150,7 @@
     }
    ],
    "source": [
-    "# STEP2: lets iterate over the whole file and print all the employees who are terminated\n",
+    "# STEP2: lets iterate over the whole file and print only those employees who are terminated\n",
     "\n",
     "file = open(file_name, \"r\")\n",
     "\n",
