--- a/tut_py_3_function_4_lambda_reduce_filter_map_any_allADVANCED.ipynb
+++ b/tut_py_3_function_4_lambda_reduce_filter_map_any_allADVANCED.ipynb
@@ -67,6 +67,7 @@
     "\n",
     "# REDO above using lambda\n",
     "add = lambda a, b: a + b # takes 2 parameter\n",
+    "\n",
     "print(add(3, 4))  # Output: 7"
    ]
   },
@@ -142,7 +143,7 @@
     "print(f)\n",
     "\n",
     "\n",
-    "# STEP2: do it for 1 value: Convert a List of Temperatures from Celsius to Fahrenheit\n",
+    "# STEP2: do it for many values: Convert a List of Temperatures from Celsius to Fahrenheit\n",
     "\n",
     "def to_faren(c):\n",
     "    return (c * 9/5) + 32\n",
@@ -205,7 +206,7 @@
    "source": [
     "# The filter() function filters elements based on a condition (returns True).\n",
     "\n",
-    "# Example: Filter Out Odd Numbers from a List\n",
+    "# Example: Filter Out even Numbers from a List\n",
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "\n",
     "# Keep only even numbers\n",
@@ -275,7 +276,9 @@
     }
    ],
    "source": [
-    "status_list = [False, False, True, False]\n",
+    "# The any() function checks if at least one element in an iterable is True.\n",
+    "\n",
+    "status_list = [False, False, True, False, False, True]\n",
     "result = any(status_list) # Check If At Least One Element is True\n",
     "\n",
     "print(result) \n"
@@ -296,8 +299,7 @@
     }
    ],
    "source": [
-    "\n",
-    "# The any() function checks if at least one element in an iterable is True.\n",
+    "# A simple application of any()\n",
     "\n",
     "# Example: Check if a List Contains Any negative Numbers\n",
     "num = [-3, -2, -1, 0, 5] # count of apples\n",
@@ -320,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "618ef8cb-1616-4194-b72c-5ec760e8f3c4",
    "metadata": {},
    "outputs": [
@@ -328,13 +330,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
-    "nums = [1, 2, 3, 4]\n",
-    "print(all(nums))  # True → all elements are non-zero (truthy)"
+    "# all()\n",
+    "# It returns True if all elements in an iterable are True (or truthy).\n",
+    "# If even one element is false (or falsy), it returns False.\n",
+    "    \n",
+    "conditions = [ True, True, True, False]\n",
+    "print(all(conditions))  "
    ]
   },
   {
@@ -351,10 +357,7 @@
      ]
     }
    ],
-   "source": [
-    "nums = [1, 0, 3, 4]\n",
-    "print(all(nums))  # False → 0 is false"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -371,8 +374,10 @@
     }
    ],
    "source": [
-    "ages = [22, 35, 30, 28]\n",
+    "# A simple application: Check if all students in list are older than 18\n",
+    "ages = [22, 35, 30, 28, 39, 10]\n",
     "are_adults = all(age >= 18 for age in ages)\n",
+    "\n",
     "print(are_adults)  # True → all are 18 or older"
    ]
   },
@@ -401,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
